--- a/whaxlu.ipynb
+++ b/whaxlu.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:70ca3a3ce0d15bb0a7aa7aed82f5c54628c2113ad6ad87300945f42d1e2d765c"
+  "signature": "sha256:8f16242c03e291e91f953cab65f3a0146e8085f7dbadaf4c91da307b9b988648"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,53 +16,32 @@
       "\n",
       "This is a python script used to sign in and signout, keeping track of hours and creating a more automative system.\n",
       "\n",
-      "Make sign in and out fast \n",
+      "Make sign in and out faster, easier to keep track of.\n",
       "\n",
       "Never forget. \n",
       "\n",
-      "Auto roll check. "
+      "Auto roll check. \n",
+      "\n",
+      "Two random hex codes for security and correct checking. \n",
+      "\n",
+      "Creates xls file with data: \n",
+      "input (or auto) name, reason, auto day/month/year hr/min - of signin"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import tweepy\n",
       "import os\n",
       "import time\n",
       "import xlutils\n",
-      "import xlwt"
+      "import xlwt\n",
+      "import dominate"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 246
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "conke = 'DfrJQ56s4Hhr8MhTg92xw'\n",
-      "consec = 'XCVXYLtK9mJ9a4aKpT0wXpmYexFvSFLxbdm1aZFPjFQ'\n",
-      "ackey = '26423770-Z8AmtM2JCVFFJ708lddF72rO2qa9gjlT1hFuYJAQ1'\n",
-      "acsec = '3lI7Bw262NOvKkqE7iw4vx1JORIasjMjAB4rkAE'\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 247
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "auth = tweepy.OAuthHandler(conke, consec)\n",
-      "auth.set_access_token(ackey, acsec)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 248
+     "prompt_number": 406
     },
     {
      "cell_type": "code",
@@ -75,7 +54,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 249
+     "prompt_number": 407
     },
     {
      "cell_type": "code",
@@ -89,13 +68,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 250,
+       "prompt_number": 408,
        "text": [
-        "'Mon, 06 Oct 2014 22:10: +0000'"
+        "'Tue, 07 Oct 2014 21:10: +0000'"
        ]
       }
      ],
-     "prompt_number": 250
+     "prompt_number": 408
     },
     {
      "cell_type": "code",
@@ -107,18 +86,40 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 251
+     "prompt_number": 409
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rawdets = ['In Date', 'In Time', 'Name', 'Reason', 'Out Date', 'Out Time']"
+      "exran = os.urandom(128).encode('hex')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 252
+     "prompt_number": 410
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ixran = os.urandom(128).encode('hex')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 411
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rawdets = ['In Date', 'In Time', 'In Code', 'Name', 'Reason', 'Out Date', 'Out Time']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 412
     },
     {
      "cell_type": "code",
@@ -129,7 +130,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 253
+     "prompt_number": 413
     },
     {
      "cell_type": "code",
@@ -156,7 +157,7 @@
        ]
       }
      ],
-     "prompt_number": 254
+     "prompt_number": 414
     },
     {
      "cell_type": "code",
@@ -170,13 +171,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 255,
+       "prompt_number": 415,
        "text": [
         "[0, 1, 2, 3, 4, 5]"
        ]
       }
      ],
-     "prompt_number": 255
+     "prompt_number": 415
     },
     {
      "cell_type": "code",
@@ -199,6 +200,8 @@
         "IN DATE\n",
         "In Time\n",
         "IN TIME\n",
+        "In Code\n",
+        "IN CODE\n",
         "Name\n",
         "NAME\n",
         "Reason\n",
@@ -210,7 +213,7 @@
        ]
       }
      ],
-     "prompt_number": 256
+     "prompt_number": 416
     },
     {
      "cell_type": "code",
@@ -218,15 +221,17 @@
      "input": [
       "ws.write(0, 0, 'In Date')\n",
       "ws.write(0, 1, 'In Time')\n",
-      "ws.write(0, 2, 'Name')\n",
-      "ws.write(0, 3, 'Reason')\n",
-      "ws.write(0, 4, 'Out Date')\n",
-      "ws.write(0, 5, 'Out Time')"
+      "ws.write(0, 2, 'In Code')\n",
+      "ws.write(0, 3, 'Name')\n",
+      "ws.write(0, 4, 'Reason')\n",
+      "ws.write(0, 5, 'Out Date')\n",
+      "ws.write(0, 6, 'Out Time')\n",
+      "ws.write(0, 7, 'Out Code')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 257
+     "prompt_number": 417
     },
     {
      "cell_type": "code",
@@ -241,7 +246,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 258
+     "prompt_number": 418
     },
     {
      "cell_type": "code",
@@ -258,7 +263,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Name: william\n"
+        "Name: wcmckee\n"
        ]
       },
       {
@@ -270,29 +275,40 @@
        ]
       }
      ],
-     "prompt_number": 259
+     "prompt_number": 419
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ws.write(1, 2, getname)"
+      "ws.write(1, 2, exran)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 260
+     "prompt_number": 420
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ws.write(1, 3, getreason)"
+      "ws.write(1, 3, getname)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 261
+     "prompt_number": 421
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ws.write(1, 4, getreason)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 422
     },
     {
      "cell_type": "code",
@@ -303,7 +319,173 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 262
+     "prompt_number": 423
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wsdict = {getname: exran}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 424
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wsdict"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 425,
+       "text": [
+        "{'wcmckee': '0c679fb7d4da7aec987242a7526e6908f95ef98021da7e648127f2016d4e079e2b504660762da0bfc58bec9f5a424f8bd2fe7fdcf1d6c7c83dae0519ee0b9dea1142e098c244d4a06dc75cd3458a98888c378868974610684717700922c77ccdd87a6858fe0e7c55ca87cf4ac7c82d9b5bccb5f1605376541a42634e1deae82a'}"
+       ]
+      }
+     ],
+     "prompt_number": 425
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wsdict.update({time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\"): time.strftime(\"%H:%M\")})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 426
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wsdict.update({getreason: ixran})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 427
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wsdict"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 428,
+       "text": [
+        "{'07-Oct-2014': '21:12',\n",
+        " 'esw': 'aeda5d0f1004bcbead476f53d3170ddde64bf47623513ce1317405477ea472235a9706b73443c264a1e3dd1b7db25de26d825e65ae63aba300b955d17172dab06acaecccb15b3a072200a0f703cae26c9397654896a98bd1e3be12169a3e91efda48658604b47eac1a107fa023a36b6a9bdee911e3b9b60989e3809a9d409f21',\n",
+        " 'wcmckee': '0c679fb7d4da7aec987242a7526e6908f95ef98021da7e648127f2016d4e079e2b504660762da0bfc58bec9f5a424f8bd2fe7fdcf1d6c7c83dae0519ee0b9dea1142e098c244d4a06dc75cd3458a98888c378868974610684717700922c77ccdd87a6858fe0e7c55ca87cf4ac7c82d9b5bccb5f1605376541a42634e1deae82a'}"
+       ]
+      }
+     ],
+     "prompt_number": 428
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wsdict.keys()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 429,
+       "text": [
+        "['wcmckee', 'esw', '07-Oct-2014']"
+       ]
+      }
+     ],
+     "prompt_number": 429
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import dominate\n",
+      "from dominate.tags import *\n",
+      "\n",
+      "doc = dominate.document(title='visitor sign sheet')\n",
+      "\n",
+      "with doc.head:\n",
+      "    link(rel='stylesheet', href='style.css')\n",
+      "    script(type='text/javascript', src='script.js')\n",
+      "\n",
+      "with doc:\n",
+      "    with div(id='header').add(ol()):\n",
+      "        for i in wsdict.keys():\n",
+      "            li(a(i))\n",
+      "\n",
+      "    with div():\n",
+      "        attr(cls='body')\n",
+      "        p('last updated: ' + time.strftime(\"%H:%M\"))\n",
+      "\n",
+      "print doc"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "<!DOCTYPE html>\n",
+        "<html>\n",
+        "  <head>\n",
+        "    <title>visitor sign sheet</title>\n",
+        "    <link href=\"style.css\" rel=\"stylesheet\">\n",
+        "    <script src=\"script.js\" type=\"text/javascript\"></script>\n",
+        "  </head>\n",
+        "  <body>\n",
+        "    <div id=\"header\">\n",
+        "      <ol>\n",
+        "        <li>\n",
+        "          <a>wcmckee</a>\n",
+        "        </li>\n",
+        "        <li>\n",
+        "          <a>esw</a>\n",
+        "        </li>\n",
+        "        <li>\n",
+        "          <a>07-Oct-2014</a>\n",
+        "        </li>\n",
+        "      </ol>\n",
+        "    </div>\n",
+        "    <div class=\"body\">\n",
+        "      <p>last updated: 21:12</p>\n",
+        "    </div>\n",
+        "  </body>\n",
+        "</html>\n"
+       ]
+      }
+     ],
+     "prompt_number": 430
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 405
     },
     {
      "cell_type": "code",
