--- a/whaxlu.ipynb
+++ b/whaxlu.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8f16242c03e291e91f953cab65f3a0146e8085f7dbadaf4c91da307b9b988648"
+  "signature": "sha256:e584b0b9ed1ea2e299152f9d5a549d6dae41e89aac9d27378fa12b3945ed2573"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "visitor sign system\n",
+      "<h2>visitor sign system</h2>\n",
       "\n",
       "This is a python script used to sign in and signout, keeping track of hours and creating a more automative system.\n",
       "\n",
@@ -24,8 +24,18 @@
       "\n",
       "Two random hex codes for security and correct checking. \n",
       "\n",
-      "Creates xls file with data: \n",
-      "input (or auto) name, reason, auto day/month/year hr/min - of signin"
+      "Creates xls file with data, also uses sqlalchemy for databases, web server: \n",
+      "input (or auto) name, reason, auto day/month/year hr/min - of signin.\n",
+      "\n",
+      "when launched asked if you want to signin or signout. \n",
+      "\n",
+      "how i want this to run for william:\n",
+      "\n",
+      "william arrives into whai. On his phone he runs the signin script. On signing out for the day the script is run onto final part, signout. asks for comment first then records time, and date. \n",
+      "\n",
+      "comment system. leave comment for staff, parent, tag staff, area, story, parent, child.\n",
+      "\n",
+      "signout - enter code of session you want to signout. "
      ]
     },
     {
@@ -36,12 +46,18 @@
       "import time\n",
       "import xlutils\n",
       "import xlwt\n",
-      "import dominate"
+      "import xlrd\n",
+      "import dominate\n",
+      "import sys\n",
+      "#from sqlalchemy import Column, ForeignKey, Integer, String\n",
+      "#from sqlalchemy.ext.declarative import declarative_base\n",
+      "#from sqlalchemy.orm import relationship\n",
+      "#from sqlalchemy import create_engine"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 406
+     "prompt_number": 562
     },
     {
      "cell_type": "code",
@@ -54,7 +70,219 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 407
+     "prompt_number": 563
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Base = declarative_base()\n",
+      " \n",
+      "#class Person(Base):\n",
+      "#    __tablename__ = 'person'\n",
+      "#    # Here we define columns for the table person\n",
+      "#    # Notice that each column is also a normal Python instance attribute.\n",
+      "#    id = Column(Integer, primary_key=True)\n",
+      "#    name = Column(String(250), nullable=False)\n",
+      " \n",
+      "#class Address(Base):\n",
+      "#    __tablename__ = 'address'\n",
+      "#    # Here we define columns for the table address.\n",
+      "#    # Notice that each column is also a normal Python instance attribute.\n",
+      "#    id = Column(Integer, primary_key=True)\n",
+      "#    datesignin = Column(String(250))\n",
+      "#    hrminsignin = Column(String(250))\n",
+      "#    usernamesignin = Column(String(250), nullable=False)\n",
+      "#    reasonsignin = Column(String(250))\n",
+      "#    person_id = Column(Integer, ForeignKey('person.id'))\n",
+      "#    person = relationship(Person)\n",
+      " \n",
+      "# Create an engine that stores data in the local directory's\n",
+      "# sqlalchemy_example.db file.\n",
+      "#engine = create_engine('sqlite:///sqlalchemy_example.db')\n",
+      " \n",
+      "# Create a$ll tables in the engine. This is equivalent to \"Create Table\"\n",
+      "# statements in raw SQL.\n",
+      "#Base.metadata.create_all(engine)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 564
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#from sqlalchemy import create_engine\n",
+      "#from sqlalchemy.orm import sessionmaker\n",
+      " \n",
+      "#from sqlalchemy_declarative import Address, Base, Person\n",
+      " \n",
+      "#engine = create_engine('sqlite:///sqlalchemy_example.db')\n",
+      "# Bind the engine to the metadata of the Base class so that the\n",
+      "# declaratives can be accessed through a DBSession instance\n",
+      "#Base.metadata.bind = engine\n",
+      " \n",
+      "#DBSession = sessionmaker(bind=engine)\n",
+      "# A DBSession() instance establishes all conversations with the database\n",
+      "# and represents a \"staging zone\" for all the objects loaded into the\n",
+      "# database session object. Any change made against the objects in the\n",
+      "# session won't be persisted into the database until you call\n",
+      "# session.commit(). If you're not happy about the changes, you can\n",
+      "# revert all of them back to the last commit by calling\n",
+      "# session.rollback()\n",
+      "#session = DBSession()\n",
+      " \n",
+      "# Insert a Person in the person table\n",
+      "#new_person = Person(name='new person')\n",
+      "#session.add(new_person)\n",
+      "#session.commit()\n",
+      " \n",
+      "# Insert an Address in the address table\n",
+      "#new_address = Address(post_code='00000', person=new_person)\n",
+      "#session.add(new_address)\n",
+      "#session.commit()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 565
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wrkbook = xlrd.open_workbook('/home/wcmckee/whai/index.xls')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 566
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print wrkbook.sheet_names()\n",
+      "\n",
+      "worksheet = wrkbook.sheet_by_name('visitor sign database')\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[u'visitor sign database']\n"
+       ]
+      }
+     ],
+     "prompt_number": 567
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "swlis = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 568
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "num_rows = worksheet.nrows - 1\n",
+      "curr_row = -1\n",
+      "while curr_row < num_rows:\n",
+      "    curr_row += 1\n",
+      "    row = worksheet.row(curr_row)\n",
+      "    print row\n",
+      "    swlis.append(row)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[text:u'In Date', text:u'In Time', text:u'In Code', text:u'Name', text:u'Reason', text:u'Out Date', text:u'Out Time', text:u'Out Code']\n",
+        "[text:u'08-Oct-2014', text:u'06:06', text:u'd53c1a079821e777e7375580b6d0855446f1aa024bd75b35cd66cb81a4dbed98d63e058b28cce0a462da07ec478e42e91ac0e27820dffca21d2f652630f633c535aa9bd88836d31e5e8c62adff7e9a450d996fdbf8077c35885f68f45f98cfc19810f8656cffc75cb9af1c51f4a98481d3595eb0b25a662f6f6b52928a9c3975', text:u'william mckee', text:u'esw', empty:'', empty:'', empty:'']\n"
+       ]
+      }
+     ],
+     "prompt_number": 569
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "valis = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 600
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for swl in swlis[1]:\n",
+      "    print swl.value\n",
+      "    valis.append(swl.value)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "08-Oct-2014\n",
+        "06:06\n",
+        "d53c1a079821e777e7375580b6d0855446f1aa024bd75b35cd66cb81a4dbed98d63e058b28cce0a462da07ec478e42e91ac0e27820dffca21d2f652630f633c535aa9bd88836d31e5e8c62adff7e9a450d996fdbf8077c35885f68f45f98cfc19810f8656cffc75cb9af1c51f4a98481d3595eb0b25a662f6f6b52928a9c3975\n",
+        "william mckee\n",
+        "esw\n",
+        "\n",
+        "\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 601
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "valis"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 602,
+       "text": [
+        "[u'08-Oct-2014',\n",
+        " u'06:06',\n",
+        " u'd53c1a079821e777e7375580b6d0855446f1aa024bd75b35cd66cb81a4dbed98d63e058b28cce0a462da07ec478e42e91ac0e27820dffca21d2f652630f633c535aa9bd88836d31e5e8c62adff7e9a450d996fdbf8077c35885f68f45f98cfc19810f8656cffc75cb9af1c51f4a98481d3595eb0b25a662f6f6b52928a9c3975',\n",
+        " u'william mckee',\n",
+        " u'esw',\n",
+        " '',\n",
+        " '',\n",
+        " '']"
+       ]
+      }
+     ],
+     "prompt_number": 602
     },
     {
      "cell_type": "code",
@@ -68,13 +296,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 408,
+       "prompt_number": 571,
        "text": [
-        "'Tue, 07 Oct 2014 21:10: +0000'"
+        "'Thu, 09 Oct 2014 05:18: +0000'"
        ]
       }
      ],
-     "prompt_number": 408
+     "prompt_number": 571
     },
     {
      "cell_type": "code",
@@ -86,7 +314,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 409
+     "prompt_number": 572
     },
     {
      "cell_type": "code",
@@ -97,7 +325,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 410
+     "prompt_number": 573
     },
     {
      "cell_type": "code",
@@ -108,7 +336,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 411
+     "prompt_number": 574
     },
     {
      "cell_type": "code",
@@ -119,7 +347,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 412
+     "prompt_number": 575
     },
     {
      "cell_type": "code",
@@ -130,7 +358,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 413
+     "prompt_number": 576
     },
     {
      "cell_type": "code",
@@ -157,7 +385,7 @@
        ]
       }
      ],
-     "prompt_number": 414
+     "prompt_number": 577
     },
     {
      "cell_type": "code",
@@ -171,13 +399,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 415,
+       "prompt_number": 578,
        "text": [
         "[0, 1, 2, 3, 4, 5]"
        ]
       }
      ],
-     "prompt_number": 415
+     "prompt_number": 578
     },
     {
      "cell_type": "code",
@@ -213,7 +441,7 @@
        ]
       }
      ],
-     "prompt_number": 416
+     "prompt_number": 579
     },
     {
      "cell_type": "code",
@@ -231,7 +459,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 417
+     "prompt_number": 580
     },
     {
      "cell_type": "code",
@@ -246,7 +474,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 418
+     "prompt_number": 581
     },
     {
      "cell_type": "code",
@@ -263,7 +491,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Name: wcmckee\n"
+        "Name: william clifford mckee\n"
        ]
       },
       {
@@ -275,7 +503,7 @@
        ]
       }
      ],
-     "prompt_number": 419
+     "prompt_number": 583
     },
     {
      "cell_type": "code",
@@ -286,7 +514,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 420
+     "prompt_number": 584
     },
     {
      "cell_type": "code",
@@ -297,7 +525,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 421
+     "prompt_number": 585
     },
     {
      "cell_type": "code",
@@ -308,18 +536,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 422
+     "prompt_number": 586
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "wb.save('/home/wcmckee/whai/' + xlvs)"
+      "#wb.save('/home/wcmckee/whai/' + xlvs)\n",
+      "wb.save('/home/wcmckee/whai/index.xls')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 423
+     "prompt_number": 589
     },
     {
      "cell_type": "code",
@@ -330,7 +559,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 424
+     "prompt_number": 590
     },
     {
      "cell_type": "code",
@@ -344,13 +573,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 425,
+       "prompt_number": 591,
        "text": [
-        "{'wcmckee': '0c679fb7d4da7aec987242a7526e6908f95ef98021da7e648127f2016d4e079e2b504660762da0bfc58bec9f5a424f8bd2fe7fdcf1d6c7c83dae0519ee0b9dea1142e098c244d4a06dc75cd3458a98888c378868974610684717700922c77ccdd87a6858fe0e7c55ca87cf4ac7c82d9b5bccb5f1605376541a42634e1deae82a'}"
+        "{'william clifford mckee': '8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8'}"
        ]
       }
      ],
-     "prompt_number": 425
+     "prompt_number": 591
     },
     {
      "cell_type": "code",
@@ -361,7 +590,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 426
+     "prompt_number": 592
     },
     {
      "cell_type": "code",
@@ -372,7 +601,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 427
+     "prompt_number": 593
     },
     {
      "cell_type": "code",
@@ -386,15 +615,15 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 428,
+       "prompt_number": 594,
        "text": [
-        "{'07-Oct-2014': '21:12',\n",
-        " 'esw': 'aeda5d0f1004bcbead476f53d3170ddde64bf47623513ce1317405477ea472235a9706b73443c264a1e3dd1b7db25de26d825e65ae63aba300b955d17172dab06acaecccb15b3a072200a0f703cae26c9397654896a98bd1e3be12169a3e91efda48658604b47eac1a107fa023a36b6a9bdee911e3b9b60989e3809a9d409f21',\n",
-        " 'wcmckee': '0c679fb7d4da7aec987242a7526e6908f95ef98021da7e648127f2016d4e079e2b504660762da0bfc58bec9f5a424f8bd2fe7fdcf1d6c7c83dae0519ee0b9dea1142e098c244d4a06dc75cd3458a98888c378868974610684717700922c77ccdd87a6858fe0e7c55ca87cf4ac7c82d9b5bccb5f1605376541a42634e1deae82a'}"
+        "{'09-Oct-2014': '05:20',\n",
+        " 'esw': '16bc6286a34823fa1194b944c0468075e1f8dccdbec787ba6f923462904aa86b45107dba4fcf60a1c6632cd25320aaddd78fa18f52b904a40fdb7d831977f49e03bf68360d1c507f1705bf85f39fdaf9c26e3628fe67cc6fa92fcf7945ab4ce7adc49c42de3ae899a24ff941baea8de256d8dd75b90b00e538829a6034ebf85c',\n",
+        " 'william clifford mckee': '8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8'}"
        ]
       }
      ],
-     "prompt_number": 428
+     "prompt_number": 594
     },
     {
      "cell_type": "code",
@@ -408,13 +637,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 429,
+       "prompt_number": 595,
        "text": [
-        "['wcmckee', 'esw', '07-Oct-2014']"
+        "['esw', '09-Oct-2014', 'william clifford mckee']"
        ]
       }
      ],
-     "prompt_number": 429
+     "prompt_number": 595
     },
     {
      "cell_type": "code",
@@ -458,25 +687,25 @@
         "    <div id=\"header\">\n",
         "      <ol>\n",
         "        <li>\n",
-        "          <a>wcmckee</a>\n",
-        "        </li>\n",
-        "        <li>\n",
         "          <a>esw</a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>07-Oct-2014</a>\n",
+        "          <a>09-Oct-2014</a>\n",
+        "        </li>\n",
+        "        <li>\n",
+        "          <a>william clifford mckee</a>\n",
         "        </li>\n",
         "      </ol>\n",
         "    </div>\n",
         "    <div class=\"body\">\n",
-        "      <p>last updated: 21:12</p>\n",
+        "      <p>last updated: 05:20</p>\n",
         "    </div>\n",
         "  </body>\n",
         "</html>\n"
        ]
       }
      ],
-     "prompt_number": 430
+     "prompt_number": 596
     },
     {
      "cell_type": "code",
@@ -485,7 +714,16 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 405
+     "prompt_number": 540
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 482
     },
     {
      "cell_type": "code",
