--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e209b30fdf89e19bd94c95752f23565afcb3cc08762c5ff0b5ac7674c0a64ce5"
+  "signature": "sha256:35ec4dc8e70238f0a123dd78d25339be934b7efb3e554424aaf3d61a77b959d7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,11 @@
      "metadata": {},
      "source": [
       "This is the signout script that opens the xl file and fill in signout info.\n",
+      "\n",
+      "Opens up list of signin data. This is date of sign in, time, name, and reason.\n",
+      "This is .meta. This script appends sign out data. This is signout date, signout time, and comments.\n",
+      "\n",
+      "8 urandom 128 keys are generated. Used these in saving the achieve, as .html, and .meta files.\n",
       "\n",
       "creates date and time mark and asks for comment"
      ]
@@ -31,7 +36,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 121
     },
     {
      "cell_type": "code",
@@ -42,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 122
     },
     {
      "cell_type": "code",
@@ -69,11 +74,11 @@
        "text": [
         "[u'visitor sign database']\n",
         "[text:u'In Date', text:u'In Time', text:u'In Code', text:u'Name', text:u'Reason', text:u'Out Date', text:u'Out Time', text:u'Out Code']\n",
-        "[text:u'09-Oct-2014', text:u'05:19', text:u'8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8', text:u'william clifford mckee', text:u'esw', text:u'09-Oct-2014', text:u'05:46', text:u'f6f1f3aa78ebce001321b74175aa9ca44b319da7a98007fbf90dc9d2097a443094b31802ad97dafbfa9da121ad1ab859e7a1b55e9613328c8a591c62bf7589f60026789576c77815bdfd446a8fbecd18aa98fddd6b76002ecb363c3e359bc1ebbfd8cb9688947da9b23f05b4adc49768fed419c7ec0d8b18a0c6345f9667db20']\n"
+        "[text:u'11-Oct-2014', text:u'06:03', text:u'187ab7de7351e16b1d1d9907831f151b9e9a251ccadc41ec8db1a09e851e9a7d2905169099133130edee273576319c2fe7a63c9f1b184c3779e567cead85c102e52bcc17fb5e92606da640bb14ad5770e6864719a5157b220927edf5c24e3265cc06305fd239510ec775e89c5269d720bcf94d0dc9d6e1353f139151148c4655', text:u'William Mckee', text:u'ESW', empty:'', empty:'', empty:'']\n"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 123
     },
     {
      "cell_type": "code",
@@ -84,7 +89,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 124
     },
     {
      "cell_type": "code",
@@ -101,18 +106,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "09-Oct-2014\n",
-        "05:19\n",
-        "8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8\n",
-        "william clifford mckee\n",
-        "esw\n",
-        "09-Oct-2014\n",
-        "05:46\n",
-        "f6f1f3aa78ebce001321b74175aa9ca44b319da7a98007fbf90dc9d2097a443094b31802ad97dafbfa9da121ad1ab859e7a1b55e9613328c8a591c62bf7589f60026789576c77815bdfd446a8fbecd18aa98fddd6b76002ecb363c3e359bc1ebbfd8cb9688947da9b23f05b4adc49768fed419c7ec0d8b18a0c6345f9667db20\n"
+        "11-Oct-2014\n",
+        "06:03\n",
+        "187ab7de7351e16b1d1d9907831f151b9e9a251ccadc41ec8db1a09e851e9a7d2905169099133130edee273576319c2fe7a63c9f1b184c3779e567cead85c102e52bcc17fb5e92606da640bb14ad5770e6864719a5157b220927edf5c24e3265cc06305fd239510ec775e89c5269d720bcf94d0dc9d6e1353f139151148c4655\n",
+        "William Mckee\n",
+        "ESW\n",
+        "\n",
+        "\n",
+        "\n"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 125
     },
     {
      "cell_type": "code",
@@ -126,31 +131,79 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 126,
        "text": [
-        "[u'09-Oct-2014',\n",
-        " u'05:19',\n",
-        " u'8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8',\n",
-        " u'william clifford mckee',\n",
-        " u'esw',\n",
-        " u'09-Oct-2014',\n",
-        " u'05:46',\n",
-        " u'f6f1f3aa78ebce001321b74175aa9ca44b319da7a98007fbf90dc9d2097a443094b31802ad97dafbfa9da121ad1ab859e7a1b55e9613328c8a591c62bf7589f60026789576c77815bdfd446a8fbecd18aa98fddd6b76002ecb363c3e359bc1ebbfd8cb9688947da9b23f05b4adc49768fed419c7ec0d8b18a0c6345f9667db20']"
+        "[u'11-Oct-2014',\n",
+        " u'06:03',\n",
+        " u'187ab7de7351e16b1d1d9907831f151b9e9a251ccadc41ec8db1a09e851e9a7d2905169099133130edee273576319c2fe7a63c9f1b184c3779e567cead85c102e52bcc17fb5e92606da640bb14ad5770e6864719a5157b220927edf5c24e3265cc06305fd239510ec775e89c5269d720bcf94d0dc9d6e1353f139151148c4655',\n",
+        " u'William Mckee',\n",
+        " u'ESW',\n",
+        " '',\n",
+        " '',\n",
+        " '']"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 126
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tiran = os.urandom(128).encode('hex')"
+      "tiran = os.urandom(128).encode('hex')\n",
+      "reran = os.urandom(128).encode('hex')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 127
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "endate = time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\")\n",
+      "          \n",
+      "entim = time.strftime(\"%H:%M\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 128
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "signoutdic = {endate: tiran}\n",
+      "timoutdic = {entim: reran}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 129
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "signoutdic.update({entim:reran})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 130
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "signkeys = signoutdic.keys()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 131
     },
     {
      "cell_type": "code",
@@ -167,7 +220,141 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 132
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "indsav = ('/home/wcmckee/whai/index.html')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 133
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "opind = open(indsav, 'w')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 134
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "opind.write(str(doc))\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 135
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "opind.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 136
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "liop = open('/home/wcmckee/visignsys/index.meta', 'a+')\n",
+      "liop.write(str(signkeys))\n",
+      "liop.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 137
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "oplis = open('/home/wcmckee/visignsys/index.meta', 'r')\n",
+      "oplsav = oplis.read()\n",
+      "oplis.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 138
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "trsor = tiran[0:12]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 139
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "trsor"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 140,
+       "text": [
+        "'70f8ec461462'"
+       ]
+      }
+     ],
+     "prompt_number": 140
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "optrd = open('/home/wcmckee/visignsys/posts/' + trsor + '.meta', 'w')\n",
+      "optrd.write(oplsav)\n",
+      "optrd.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 141
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "oplsav"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 142,
+       "text": [
+        "\"['ESW', 'William Mckee', '06:03', '11-Oct-2014']['06:06', '11-Oct-2014']\""
+       ]
+      }
+     ],
+     "prompt_number": 142
     },
     {
      "cell_type": "code",
@@ -211,28 +398,28 @@
         "    <div id=\"header\">\n",
         "      <ol>\n",
         "        <li>\n",
-        "          <a>09-Oct-2014</a>\n",
+        "          <a>10-Oct-2014</a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>05:19</a>\n",
+        "          <a>21:44</a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8</a>\n",
+        "          <a>d590ef04f82e687eaf7584ef14c05bc074a99221f6b795d3a832dc0f7804b1f5a8af8978745ba1de227bcff85df4c6281fe6aa805e7e4ca136409ed69bcdb3543add71e1042aee18442cc889b9d2b72745ed5fc32c5288df80b1271c348d7a398b125f93f31ca3843843479b7711d518ed8e51df3f1ad607a1ab501f241ee782</a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>william clifford mckee</a>\n",
+        "          <a>William Mckee</a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>esw</a>\n",
+        "          <a>ESW</a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>09-Oct-2014</a>\n",
+        "          <a></a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>05:46</a>\n",
+        "          <a></a>\n",
         "        </li>\n",
         "        <li>\n",
-        "          <a>f6f1f3aa78ebce001321b74175aa9ca44b319da7a98007fbf90dc9d2097a443094b31802ad97dafbfa9da121ad1ab859e7a1b55e9613328c8a591c62bf7589f60026789576c77815bdfd446a8fbecd18aa98fddd6b76002ecb363c3e359bc1ebbfd8cb9688947da9b23f05b4adc49768fed419c7ec0d8b18a0c6345f9667db20</a>\n",
+        "          <a></a>\n",
         "        </li>\n",
         "      </ol>\n",
         "    </div>\n",
@@ -244,120 +431,7 @@
        ]
       }
      ],
-     "prompt_number": 34
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "indsav = ('/home/wcmckee/whai/index.html')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 35
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "opind = open(indsav, 'w')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "opind.write(str(doc))\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "opind.close()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 40
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "cat /home/wcmckee/whai/index.html"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<!DOCTYPE html>\r\n",
-        "<html>\r\n",
-        "  <head>\r\n",
-        "    <title>visitor sign database</title>\r\n",
-        "    <link href=\"style.css\" rel=\"stylesheet\">\r\n",
-        "    <script src=\"script.js\" type=\"text/javascript\"></script>\r\n",
-        "  </head>\r\n",
-        "  <body>\r\n",
-        "    <div id=\"header\">\r\n",
-        "      <ol>\r\n",
-        "        <li>\r\n",
-        "          <a>09-Oct-2014</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>05:19</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>8f4dc416d7f78051a618f0c0a86c7d580b558ef3237deb3d3d4e75e6cb2b85c0cacdbfc793d86f9ed88ece0f721fe0e650cf95831f83eb67c07e72b0a381e4795c9d4c69073d620b96bb20925cdd5dde45e6099a28f85742e0ea99a8a40a2950c076ee5a4c8c3a9a35e7bc1a7972c11794018642a1e1af13fb8ce77e83f56ce8</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>william clifford mckee</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>esw</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>09-Oct-2014</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>05:46</a>\r\n",
-        "        </li>\r\n",
-        "        <li>\r\n",
-        "          <a>f6f1f3aa78ebce001321b74175aa9ca44b319da7a98007fbf90dc9d2097a443094b31802ad97dafbfa9da121ad1ab859e7a1b55e9613328c8a591c62bf7589f60026789576c77815bdfd446a8fbecd18aa98fddd6b76002ecb363c3e359bc1ebbfd8cb9688947da9b23f05b4adc49768fed419c7ec0d8b18a0c6345f9667db20</a>\r\n",
-        "        </li>\r\n",
-        "      </ol>\r\n",
-        "    </div>\r\n",
-        "    <div class=\"body\">\r\n",
-        "      <p>visitor sign database is open source. Visit https://github.com/wcmckee/wcmckee </p>\r\n",
-        "    </div>\r\n",
-        "  </body>\r\n",
-        "</html>"
-       ]
-      }
-     ],
-     "prompt_number": 41
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "lily allen live"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 61
     }
    ],
    "metadata": {}
