added input comment to signout

--- a/rgdsn.ipynb
+++ b/rgdsn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c6fefbf805b548c1a3ab922d73064382b5df1421a6cf913b37384b9e4177f456"
+  "signature": "sha256:d4652655f22dd74042fcd1b4c41e4f6c83230a4543f3e2687b248286ce9ac331"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -600,12 +600,12 @@
      "input": [
       "datelis = []\n",
       "refdic = {}\n",
-      "rgdef = {'test': 1234}"
+      "rgdef = {'test': 'testvalue'}"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 407
+     "prompt_number": 430
     },
     {
      "cell_type": "code",
@@ -700,7 +700,14 @@
         "My favorite pic of my son and I! I'd love to see what you guys can do with it!\n",
         "http://i.imgur.com/LWCOOgc.jpg\n",
         "duckduckduckmoose\n",
-        "None\n",
+        "None"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "0\n",
         "t3_2iybb0\n",
         "Here is a picture of me. I'd love to see some concept work on here, in any style!\n",
@@ -715,14 +722,7 @@
         "None\n",
         "6\n",
         "t3_2iy151\n",
-        "Would someone draw my dog ,hunter? I would love to see some drawings of him :)"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "Would someone draw my dog ,hunter? I would love to see some drawings of him :)\n",
         "http://imgur.com/4jR1lDS\n",
         "cryoskid\n",
         "None\n",
@@ -768,13 +768,7 @@
         "http://i.imgur.com/MQAL6Nh.jpg\n",
         "Dimanovic\n",
         "None\n",
-        "16\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
+        "16\n",
         "t3_2ixjis\n",
         "I'm a colorful gal. Thought that might make for an interesting subject. Draw me?\n",
         "http://imgur.com/6M2Z14i\n",
@@ -796,7 +790,7 @@
        ]
       }
      ],
-     "prompt_number": 408
+     "prompt_number": 431
     },
     {
      "cell_type": "code",
@@ -821,19 +815,9 @@
         "http://i.imgur.com/IFziYXk.jpg\n",
         "http://i.imgur.com/oZhyLVD.jpg\n"
        ]
-      },
-      {
-       "ename": "TypeError",
-       "evalue": "argument of type 'int' is not iterable",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-409-5f9805e7284c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrgt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrgdef\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[1;34m'.jpg'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrgt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[1;32mprint\u001b[0m \u001b[0mrgt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mTypeError\u001b[0m: argument of type 'int' is not iterable"
-       ]
       }
      ],
-     "prompt_number": 409
+     "prompt_number": 432
     },
     {
      "cell_type": "code",
@@ -882,7 +866,47 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "http://imgur.com/a/rRmGI\n",
+        "http://i.imgur.com/IFziYXk.jpg\n",
+        "http://imgur.com/uWES0tY\n",
+        "http://imgur.com/JVVftF2\n",
+        "http://imgur.com/5j6LTVg\n",
+        "http://imgur.com/a/32qqy\n",
+        "http://i.imgur.com/r46FTMo.jpg\n",
+        "http://imgur.com/a/LgaDy\n",
+        "http://imgur.com/UUQMFXW\n",
+        "http://imgur.com/uL36TmW\n",
+        "http://i.imgur.com/Hb2Lt6K.jpg\n",
+        "http://i.imgur.com/LWCOOgc.jpg\n",
+        "http://imgur.com/GOgmk9n\n",
+        "http://imgur.com/XUfvFa4\n",
+        "http://imgur.com/4jR1lDS"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "http://imgur.com/a/dQyBe\n",
+        "http://i.imgur.com/O39tlSA.jpg\n",
+        "http://i.imgur.com/oZhyLVD.jpg\n",
+        "http://imgur.com/FT8f9AG\n",
+        "http://imgur.com/a/hubRk\n",
+        "http://imgur.com/iQ073GT\n",
+        "http://i.imgur.com/MQAL6Nh.jpg\n",
+        "http://imgur.com/6M2Z14i\n",
+        "http://imgur.com/jQzJSAJ\n",
+        "http://imgur.com/cnEiudc\n"
+       ]
+      }
+     ],
+     "prompt_number": 433
     },
     {
      "cell_type": "code",
